--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^7.0.0"
   }
 }
